[tool.poetry]
name = "fmx-update-equipment"
version = "0.1.0"
description = ""
authors = ["chrisreichert53 <creichert.53@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.0.9"
python-dotenv = "^0.19.2"
pandas = "^1.3.4"
pydash = "^5.1.0"
requests = "^2.26.0"
PyInquirer = "^1.0.3"
json-flatten = "^0.2"
requests-toolbelt = "^0.9.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[tool.black]
line-length = 110

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
